Archive2/f3/6aea5f27b658f2/output
main.cpp: In function 'int main()':
main.cpp:4:22: error: narrowing conversion of 'y' from 'int' to 'unsigned int' inside { } [-Werror=narrowing]
     unsigned int x {y};
                      ^
main.cpp:4:18: error: unused variable 'x' [-Werror=unused-variable]
     unsigned int x {y};
                  ^
cc1plus: all warnings being treated as errors
