Archive2/f3/6aea5f27b658f2/main.cpp
int main()
{
    int y = 5;
    unsigned int x {y};
}